PYIC-8613: add more consumer tests for dcmaw async sqs queue - invalid message body - VC with a CI - message body with error